--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
     <head>
     <meta charset="utf-8">
-    <title>JKIA Accommodation | About Us - Polarhomes Airbnb in Syokimau Nairobi</title>
+    <title>Jomo Kenyatta International Airport Accommodation | About Us - Polarhomes Airbnb in Syokimau Nairobi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
@@ -11,22 +11,22 @@
     <link rel="canonical" href="https://www.polarhomes.org/about">
 
     <meta name="title" content="JKIA Accommodation | About Polarhomes Airbnb Syokimau">
-    <meta name="description" content="Looking for JKIA accommodation? Learn more about Polarhomes – your trusted Airbnb near JKIA, SGR, and Nairobi Expressway in Syokimau. Safe, clean, and affordable stays.">
-    <meta name="keywords" content="JKIA accommodation, Syokimau Airbnb, Nairobi airport stays, SGR Nairobi accommodation, expressway rental, makumbi Airbnb, Polarhomes JKIA, Airbnb Kenya, short-term apartment Nairobi, Polarhomes About Us">
+    <meta name="description" content="Looking for Jomo Kenyatta International Airport accommodation? Learn more about Polarhomes – your trusted Airbnb near JKIA, SGR, and Nairobi Expressway in Syokimau. Safe, clean, and affordable stays.">
+    <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, Syokimau Airbnb, Nairobi airport stays, SGR Nairobi accommodation, expressway rental, makumbi Airbnb, Polarhomes JKIA, Airbnb Kenya, short-term apartment Nairobi, Polarhomes About Us">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/about">
-    <meta property="og:title" content="JKIA Accommodation | About Polarhomes Airbnb Syokimau">
+    <meta property="og:title" content="Jomo Kenyatta International Airport Accommodation | About Polarhomes Airbnb Syokimau">
     <meta property="og:description" content="Discover Polarhomes – Safe and stylish Airbnb options near JKIA and Nairobi Expressway. Learn more about us and why travelers trust our accommodations.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/about">
-    <meta name="twitter:title" content="About Polarhomes | Trusted JKIA Accommodation in Nairobi">
+    <meta name="twitter:title" content="About Polarhomes | Trusted Jomo Kenyatta International Airport Accommodation in Nairobi">
     <meta name="twitter:description" content="Meet the team behind Polarhomes – premium Airbnb service near JKIA. Convenient for airport travelers, SGR passengers, and business guests.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
@@ -35,9 +35,9 @@
     {
       "@context": "https://schema.org",
       "@type": "AboutPage",
-      "name": "About Polarhomes | JKIA Accommodation",
+      "name": "About Polarhomes | Jomo Kenyatta International Airport Accommodation",
       "url": "https://www.polarhomes.org/about",
-      "description": "Polarhomes offers reliable Airbnb stays near JKIA Airport, SGR, and the Nairobi Expressway. Learn about our mission and hospitality promise.",
+      "description": "Polarhomes offers reliable Airbnb stays near Jomo Kenyatta International Airport Airport, SGR, and the Nairobi Expressway. Learn about our mission and hospitality promise.",
       "publisher": {
         "@type": "Organization",
         "name": "Polarhomes",
@@ -122,7 +122,7 @@
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
     <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
         <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-        <h1 class="m-0 fancy-text ms-2">PH</h1>
+        <h1 class="m-0 fancy-text ms-2"></h1>
     </a>
 
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -151,14 +151,14 @@
 <!-- Styles -->
 <style>
         .logo-img {
-        width: 90px; /* Adjust size as needed */
+        width: 90px; 
         height: 70px;
     }
 
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
-        color: gold; /* Luxurious golden color */
+        color: gold; 
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: "Cinzel", serif;
@@ -190,7 +190,7 @@
         <!-- Page Header End -->
 
 
-      <!-- Booking Start -->
+      <!-- Booking Start 
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <form action="https://formspree.io/f/xkgryeaa" method="POST">
@@ -235,7 +235,7 @@
         </form>
     </div>
 </div>
-<!-- Booking End -->
+ Booking End -->
 
 
  <!-- About Start -->
@@ -246,17 +246,18 @@
                 <h6 class="section-title text-start text-primary text-uppercase">About Us</h6>
                 <h1 class="mb-4">Discover <span class="text-primary text-uppercase">Unforgettable Stays</span></h1>
                 <p class="mb-4">
-                    Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
-                    Nestled along the Expressway in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
-                    Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
-                    curated selection of premium accommodations tailored to your needs. Experience accomodation in jkia or near jkia, sgr and expressway as well as near large market centre and also in the capital city of kenya
+                    Welcome to <strong>Polarhomes</strong>,your gateway to luxurious and memorable stays in Nairobi, Kenya.
+                    Nestled in the capital city of Kenya, near the Nairobi Expressway, near Jomo Kenyatta International Airport, 
+                    near SGR and close to major shopping center in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
+                    Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation,
+                    we provide a curated selection of premium accommodations tailored to your needs.
                 </p>
                 <div class="row g-3 pb-4">
                     <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-hotel fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">14</h2>
+                                <h2 class="mb-1" data-toggle="counter-up">38</h2>
                                 <p class="mb-0">Premium Listings</p>
                             </div>
                         </div>
@@ -265,7 +266,7 @@
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-users-cog fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">34</h2>
+                                <h2 class="mb-1" data-toggle="counter-up">94</h2>
                                 <p class="mb-0">Verified Hosts</p>
                             </div>
                         </div>
@@ -274,7 +275,7 @@
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-users fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">53</h2>
+                                <h2 class="mb-1" data-toggle="counter-up">193</h2>
                                 <p class="mb-0">Happy Guests</p>
                             </div>
                         </div>
@@ -307,14 +308,15 @@
                 <h1 class="mb-4">Experience Comfort in <span class="text-primary text-uppercase">Syokimau, Nairobi</span></h1>
                 <p class="mb-4">
                     Our properties are strategically located in Syokimau, a prime area along the Nairobi Expressway. 
-                    This ensures easy access to the Jomo Kenyatta International Airport (JKIA), Nairobi CBD, 
+                    This ensures easy access to the Jomo Kenyatta International Airport (JKIA), Nairobi CBD, near sgr, nairobi expressway,
                     top shopping malls, and major business hubs. Whether you're here for leisure or business, our location
                     offers unmatched convenience.
                 </p>
                 <ul class="list-unstyled">
                     <li><i class="fa fa-map-marker-alt text-primary me-2"></i> 5 minutes from JKIA</li>
-                    <li><i class="fa fa-car text-primary me-2"></i> Easy access to Nairobi Expressway</li>
-                    <li><i class="fa fa-shopping-bag text-primary me-2"></i> Close to malls & entertainment spots</li>
+                    <li><i class="fa fa-car text-primary me-2"></i> Near Nairobi Expressway</li>
+                    <li><i class="fa fa-shopping-bag text-primary me-2"></i>Near malls & entertainment spots</li>
+                    <li><i class="fa fa-shopping-bag text-primary me-2"></i>Near SGR</li>
                     <li><i class="fa fa-bus text-primary me-2"></i> Public transport & taxi services available</li>
                 </ul>
             </div>
@@ -388,83 +390,6 @@
     }
 </style>
 
-        <!-- Team Start 
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title text-center text-primary text-uppercase">Our Team</h6>
-                    <h1 class="mb-5">Explore Our <span class="text-primary text-uppercase">Staffs</span></h1>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="rounded shadow overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/team-1.jpg" alt="">
-                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Full Name</h5>
-                                <small>Designation</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="rounded shadow overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/team-2.jpg" alt="">
-                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Full Name</h5>
-                                <small>Designation</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="rounded shadow overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/team-3.jpg" alt="">
-                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Full Name</h5>
-                                <small>Designation</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="rounded shadow overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/team-4.jpg" alt="">
-                                <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Full Name</h5>
-                                <small>Designation</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        Team End -->
-        
 
 <!-- Footer Start -->
 <div class="container-fluid bg-dark text-light footer wow fadeIn pt-4 pb-2 mt-5" data-wow-delay="0.1s">
