--- a/booking.html
+++ b/booking.html
@@ -10,24 +10,24 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.polarhomes.org/booking">
 
-    <meta name="title" content="JKIA Accommodation Booking | Polarhomes Airbnb Nairobi Syokimau">
-    <meta name="description" content="Secure JKIA accommodation with Polarhomes – book fully-furnished, stylish Airbnb apartments in Syokimau, near SGR, Expressway, and Nairobi Airport. Best for layovers, business, or travel.">
-    <meta name="keywords" content="JKIA accommodation, accommodation near JKIA, book Airbnb JKIA, Syokimau Airbnb, Nairobi Expressway stay, SGR accommodation, Nairobi airport apartment, Polarhomes booking, Kenya Airbnb, airport hotel alternative, expressway apartment, JKIA short stay">
+    <meta name="title" content="Jomo Kenyatta International Airport Accommodation Booking | Polarhomes Airbnb Nairobi Syokimau">
+    <meta name="description" content="Secure Jomo Kenyatta International Airport accommodation with Polarhomes – book fully-furnished, stylish Airbnb apartments in Syokimau, near SGR, Expressway, and Nairobi Airport. Best for layovers, business, or travel.">
+    <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, accommodation near Jomo Kenyatta International Airport, book Airbnb Jomo Kenyatta International Airport, Syokimau Airbnb, Nairobi Expressway stay, SGR accommodation, Nairobi airport apartment, Polarhomes booking, Kenya Airbnb, airport hotel alternative, expressway apartment, JKIA short stay">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/booking">
-    <meta property="og:title" content="Book Accommodation near JKIA Nairobi | Polarhomes Airbnb">
-    <meta property="og:description" content="Easily book secure and affordable JKIA accommodation near Nairobi Expressway & Syokimau. Trusted Airbnb provider – Polarhomes.">
+    <meta property="og:title" content="Book Accommodation near Jomo Kenyatta International Airport Nairobi | Polarhomes accomodation">
+    <meta property="og:description" content="Easily book secure and affordable Jomo Kenyatta International Airport accommodation near Nairobi Expressway & Syokimau. Trusted Airbnb provider – Polarhomes.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/booking">
-    <meta name="twitter:title" content="JKIA Accommodation | Polarhomes Booking Page">
-    <meta name="twitter:description" content="Book a modern, fully-furnished apartment near JKIA Nairobi through Polarhomes. Ideal short stays, long stays, and transit bookings.">
+    <meta name="twitter:title" content="Jomo Kenyatta International Airport Accommodation | Polarhomes Booking Page">
+    <meta name="twitter:description" content="Book a modern, fully-furnished apartment near Jomo Kenyatta International Airport Nairobi through Polarhomes. Ideal short stays, long stays, and transit bookings.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
@@ -188,14 +188,14 @@
 <!-- Styles -->
 <style>
         .logo-img {
-        width: 90px; /* Adjust size as needed */
+        width: 90px; 
         height: 70px;
     }
 
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
-        color: gold; /* Luxurious golden color */
+        color: gold; 
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: "Cinzel", serif;
@@ -227,7 +227,7 @@
         <!-- Page Header End -->
 
 
-<!-- Booking Start -->
+<!-- Booking Start 
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <form action="https://formspree.io/f/xkgryeaa" method="POST">
@@ -272,7 +272,7 @@
         </form>
     </div>
 </div>
-<!-- Booking End -->
+ Booking End -->
 
 
         <!-- Booking Start -->
@@ -366,8 +366,8 @@
         </div>
     </div>
 </form>
-                        </div>
-                    </div>
+     </div>
+         </div>
                 </div>
             </div>
         </div>
