--- a/contact.html
+++ b/contact.html
@@ -3,30 +3,30 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contact Polarhomes | Airbnb Syokimau near JKIA| accomodation jkia | jkia accomodation</title>
+    <title>Contact Polarhomes | Airbnb Syokimau near Jomo Kenyatta International Airport| accomodation Jomo Kenyatta International Airport | Jomo Kenyatta International Airport accomodation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.polarhomes.org/contact">
     <meta name="title" content="Contact Polarhomes | Airbnb Syokimau near JKIA |jkia accomodation">
-    <meta name="description" content="Jkia accomodation, accomodation near jkia, Get in touch with Polarhomes for secure, affordable, and fully-furnished Airbnb rentals near JKIA, Syokimau, and the Nairobi Expressway. We're here to assist with your booking or inquiries.">
-    <meta name="keywords" content="accomodation near jkia, jkia accomodation, sgr accomodation, expressway accomodation, contact Polarhomes, Airbnb Syokimau contact, JKIA Airbnb host, Polar homes Kenya, Nairobi Airbnb contact, book Airbnb JKIA, reach Polarhomes, Airbnb Kenya customer care, furnished rental support, Airbnb Nairobi Expressway host, Polarhomes phone number">
-    <meta name="author" content="Polarhomes">
+    <meta name="description" content="Jomo Kenyatta International Airport accomodation, accomodation near Jomo Kenyatta International Airport, Get in touch with Polarhomes for secure, affordable, and fully-furnished Airbnb rentals near JKIA, Syokimau, and the Nairobi Expressway. We're here to assist with your booking or inquiries.">
+    <meta name="keywords" content="accomodation near Jomo Kenyatta International Airport, Jomo Kenyatta International Airport accomodation, sgr accomodation, expressway accomodation, contact Polarhomes, Airbnb Syokimau contact, JKIA Airbnb host, Polar homes Kenya, Nairobi Airbnb contact, book Airbnb JKIA, reach Polarhomes, Airbnb Kenya customer care, furnished rental support, Airbnb Nairobi Expressway host, Polarhomes phone number">
+    <meta name="author" content="Polarhomes, antocapteknologies">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/contact">
-    <meta property="og:title" content="Contact Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
+    <meta property="og:title" content="Contact Polarhomes | Airbnb Near Jomo Kenyatta International Airport & Nairobi Expressway">
     <meta property="og:description" content="Reach out to Polarhomes for assistance, bookings, or Airbnb inquiries in Nairobi, Syokimau, or near JKIA.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/contact">
-    <meta name="twitter:title" content="Contact Polarhomes | Airbnb Near JKIA & Nairobi Expressway">
-    <meta name="twitter:description" content="Contact us today to book or inquire about Airbnb stays in Syokimau and around JKIA.">
+    <meta name="twitter:title" content="Contact Polarhomes | Airbnb Near Jomo Kenyatta International Airport & Nairobi Expressway">
+    <meta name="twitter:description" content="Contact us today to book or inquire about Airbnb stays in Syokimau and around Jomo Kenyatta International Airport.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
@@ -160,14 +160,14 @@
 <!-- Styles -->
 <style>
         .logo-img {
-        width: 90px; /* Adjust size as needed */
+        width: 90px; 
         height: 70px;
     }
 
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
-        color: gold; /* Luxurious golden color */
+        color: gold; 
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: "Cinzel", serif;
@@ -179,8 +179,6 @@
     </div>
 </div>
 <!-- Header End -->
-
-
         <!-- Page Header Start -->
         <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
             <div class="container-fluid page-header-inner py-5">
@@ -199,7 +197,7 @@
         <!-- Page Header End -->
 
 
-       <!-- Booking Start -->
+       <!-- Booking Start 
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <form action="https://formspree.io/f/xkgryeaa" method="POST">
@@ -244,7 +242,7 @@
         </form>
     </div>
 </div>
-<!-- Booking End -->
+ Booking End -->
 
 
 <!-- Contact Start -->
@@ -291,6 +289,12 @@
                                 <div class="form-floating">
                                     <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                                     <label for="email">Your Email</label>
+                                </div>
+                            </div>
+                               <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="tel" class="form-control" name="tel" id="tel" placeholder="Your number" required>
+                                    <label for="tel">Your Number</label>
                                 </div>
                             </div>
                             <div class="col-12">
