--- a/room-details.html
+++ b/room-details.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway</title>
+  <title>Jomo Kenyatta International Airport Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Canonical URL -->
@@ -11,8 +11,8 @@
 
   <!-- SEO Meta Tags -->
   <meta name="title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
-  <meta name="description" content="Looking for affordable and stylish JKIA accommodation? Polarhomes offers modern, secure Airbnb rooms in Syokimau near Nairobi Expressway. Fast Wi-Fi, 24/7 security, and ideal for travelers from JKIA or SGR. Book your stay today.">
-  <meta name="keywords" content="jkia accommodation, syokimau airbnb, nairobi airport stay, sgr accommodation, polarhomes airbnb, expressway room rental, airport guesthouse, short stay near JKIA, affordable jkia lodging, syokimau furnished apartment, secure airbnb syokimau, nairobi airport apartment, polarhomes nairobi, rooms with wifi jkia, polarhomes kenya">
+  <meta name="description" content="Looking for affordable and stylish Jomo Kenyatta International Airport accommodation? Polarhomes offers modern, secure Airbnb rooms in Syokimau near Nairobi Expressway. Fast Wi-Fi, 24/7 security, and ideal for travelers from JKIA or SGR. Book your stay today.">
+  <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, syokimau airbnb, nairobi airport stay, sgr accommodation, polarhomes airbnb, expressway room rental, airport guesthouse, short stay near JKIA, affordable jkia lodging, syokimau furnished apartment, secure airbnb syokimau, nairobi airport apartment, polarhomes nairobi, rooms with wifi jkia, polarhomes kenya">
 
   <meta name="author" content="Polarhomes">
   <meta name="robots" content="index, follow" />
@@ -22,15 +22,15 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.polarhomes.org/room-details">
-  <meta property="og:title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau">
-  <meta property="og:description" content="Explore Polarhomes Airbnb rooms near JKIA. Affordable, modern, and secure stays in Syokimau with fast Wi-Fi and access to Nairobi Expressway.">
+  <meta property="og:title" content="Jomo Kenyatta International Airport Accommodation | Polarhomes Airbnb Syokimau">
+  <meta property="og:description" content="Explore Polarhomes Airbnb rooms near Jomo Kenyatta International Airport. Affordable, modern, and secure stays in Syokimau with fast Wi-Fi and access to Nairobi Expressway.">
   <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://www.polarhomes.org/room-details">
-  <meta name="twitter:title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau">
-  <meta name="twitter:description" content="See Polarhomes Airbnb details near JKIA & Nairobi Expressway. Clean, affordable short stays with all amenities in Syokimau.">
+  <meta name="twitter:title" content="Jomo Kenyatta International Airport Accommodation | Polarhomes Airbnb Syokimau">
+  <meta name="twitter:description" content="See Polarhomes Airbnb details near Jomo Kenyatta International Airport & Nairobi Expressway. Clean, affordable short stays with all amenities in Syokimau.">
   <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
   <!-- Favicon -->
@@ -81,7 +81,7 @@
         "value": true
       }
     ],
-    "description": "Affordable and secure Airbnb accommodation in Syokimau near JKIA and Nairobi Expressway. Ideal for travelers, business guests, and short stays.",
+    "description": "Affordable and secure Airbnb accommodation in Syokimau near Jomo Kenyatta International Airport and Nairobi Expressway. Ideal for travelers, business guests, and short stays.",
     "sameAs": [
       "https://www.facebook.com/polarhomes",
       "https://www.instagram.com/polarhomes",
@@ -187,14 +187,14 @@
 <!-- Styles -->
 <style>
         .logo-img {
-        width: 90px; /* Adjust size as needed */
+        width: 90px; 
         height: 70px;
     }
 
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
-        color: gold; /* Luxurious golden color */
+        color: gold; 
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: "Cinzel", serif;
@@ -240,7 +240,7 @@
     }
   </style>
 
-        <!-- Booking Start -->
+        <!-- Booking Start 
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <form action="https://formspree.io/f/xkgryeaa" method="POST">
@@ -285,7 +285,7 @@
         </form>
     </div>
 </div>
-<!-- Booking End -->
+ Booking End -->
 <body>
 <div class="container py-5">
     <h2 id="room-title" class="text-center text-uppercase fw-bold mb-4 text-primary"></h2>
