--- a/room.html
+++ b/room.html
@@ -9,24 +9,24 @@
   <meta name="googlebot" content="index, follow" />
 
     <!-- Primary SEO Meta Tags -->
-    <meta name="title" content="JKIA Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
-    <meta name="description" content="Book cozy, affordable rooms near JKIA airport in Syokimau. Polarhomes offers secure, stylish Airbnbs along the Nairobi Expressway, perfect for travelers & short stays.">
-    <meta name="keywords" content="jkia accommodation, syokimau airbnb, nairobi airport stay, sgr accommodation, polarhomes airbnb, expressway room rental, airport guesthouse, short stay near JKIA, affordable jkia lodging, syokimau furnished apartment, secure airbnb syokimau, nairobi airport apartment, polarhomes nairobi, rooms with wifi jkia, polarhomes kenya, polarhomes, airbnb near JKIA, rooms near JKIA, syokimau airbnb, Nairobi expressway accommodation, short stay Nairobi, inedesign Makumbi Park, apartments JKIA, JKIA rooms, airbnb syokimau, polarhomes syokimau, near airport nairobi, airbnb near expressway">
+    <meta name="title" content="Jomo Kenyatta International Airport Accommodation | Polarhomes Airbnb Syokimau | Near Nairobi Expressway">
+    <meta name="description" content="Book cozy, affordable rooms near Jomo Kenyatta International Airport airport in Syokimau. Polarhomes offers secure, stylish Airbnbs along the Nairobi Expressway, perfect for travelers & short stays.">
+    <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, syokimau airbnb, nairobi airport stay, sgr accommodation, polarhomes airbnb, expressway room rental, airport guesthouse, short stay near JKIA, affordable jkia lodging, syokimau furnished apartment, secure airbnb syokimau, nairobi airport apartment, polarhomes nairobi, rooms with wifi jkia, polarhomes kenya, polarhomes, airbnb near JKIA, rooms near JKIA, syokimau airbnb, Nairobi expressway accommodation, short stay Nairobi, inedesign Makumbi Park, apartments JKIA, JKIA rooms, airbnb syokimau, polarhomes syokimau, near airport nairobi, airbnb near expressway">
     <meta name="author" content="Polarhomes">
 	<meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/room">
-    <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
-    <meta property="og:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near JKIA and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
+    <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near Jomo Kenyatta International Airport, Nairobi">
+    <meta property="og:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near Jomo Kenyatta International Airport and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/room">
-    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
-    <meta name="twitter:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near JKIA and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
+    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near Jomo Kenyatta International Airport, Nairobi">
+    <meta name="twitter:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near Jomo Kenyatta International Airport and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
@@ -55,8 +55,8 @@
         { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
         { "@type": "LocationFeatureSpecification", "name": "Secure Parking", "value": true },
         { "@type": "LocationFeatureSpecification", "name": "24/7 Check-in", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Near JKIA Airport", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Close to Nairobi Expressway", "value": true }
+        { "@type": "LocationFeatureSpecification", "name": "Near Jomo Kenyatta International Airport Airport", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "near Nairobi Expressway", "value": true }
       ]
     }
     </script>
@@ -161,14 +161,14 @@
 <!-- Styles -->
 <style>
         .logo-img {
-        width: 90px; /* Adjust size as needed */
+        width: 90px; 
         height: 70px;
     }
 
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
-        color: gold; /* Luxurious golden color */
+        color: gold; 
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: "Cinzel", serif;
@@ -176,8 +176,8 @@
     }
 	.room-item img {
     width: 100%;
-    height: 200px; /* Set the height */
-    object-fit: cover; /* Ensure the image scales properly */
+    height: 200px; 
+    object-fit: cover; 
 }
 
 </style>
@@ -205,7 +205,7 @@
         <!-- Page Header End -->
 
 
-    <!-- Booking Start -->
+    <!-- Booking Start 
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <form action="https://formspree.io/f/xkgryeaa" method="POST">
@@ -250,7 +250,7 @@
         </form>
     </div>
 </div>
-<!-- Booking End -->
+Booking End -->
 
 
 <!-- Room Start -->
